--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,5 +1,6 @@
 # Root logger option
 log4j.rootLogger=INFO, stdout
+log4j.logger.s=INFO, A
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=log
@@ -12,3 +13,10 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %C:%M:%L - %m%n
+
+log4j.appender.A=org.apache.log4j.RollingFileAppender
+log4j.appender.A.File=stat
+log4j.appender.A.MaxFileSize=12MB
+log4j.appender.A.MaxBackupIndex=1
+log4j.appender.A.layout=org.apache.log4j.PatternLayout
+log4j.appender.A.layout.ConversionPattern=%m%n
